# komorebi

./: .editorconfig  .flake8  .gitignore  README.md  komorebi-wallpaper-creator.py  komorebi.py  meson.build
komorebi/: __init__.in  preferences_window.py  screen.py  settings.py  utilities.py
komorebi/bubblemenu/: item.py  menu.py
komorebi/overlays/: asset.py  base.py  clock.py  desktop.py
komorebi/wallpaper_creator/: pages.py  utilities.py  window.py
komorebi/wallpapers/: base.py  image.py  video.py  web.py
